--- a/main.html
+++ b/main.html
@@ -6,8 +6,16 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color:yellow;text-align:center">
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>Flowers are the reproductive parts of flowering plants and come in a variety of shapes, sizes, and colors. They attract pollinators like bees and butterflies through their scent and nectar. Flowers also play a vital role in ecosystems and are widely used for decoration and symbolism.</p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>The rose is one of the most popular and widely cultivated flowers in the world, known for its beauty and fragrance. It comes in many colors, each symbolizing different emotions—red for love, white for purity, and yellow for friendship. Roses are often used in perfumes, decorations, and as a symbol of romance and admiration.</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
